--- a/partials/gullcode.html
+++ b/partials/gullcode.html
@@ -45,7 +45,7 @@
 
             <p>Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips
                 amets.</p>
-            <a class="btn btn-primary" href="#">Click Me!</a>
+            <a class="btn btn-primary" href="https://involved.salisbury.edu/event/4913140">Click Me!</a>
         </div>
 
     </div>
