add github link and removed extra files

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <div class="container">
-        <p><a href="https://github.com/JacksonBellinger">&hearts; on github</a></p>
+        <p><a href="https://github.com/JacksonBellinger/macs-web">github</a></p>
     </div>
 </footer>
