resize images to fit beter

--- a/partials/execs.html
+++ b/partials/execs.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/lela.jpg">
+            <img class="img-responsive" src="pics/lela.jpg" style="width:700px;height:350px;">
 
             <h3>Lela Bones
                 <small>President</small>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/jack.jpg">
+            <img class="img-responsive" src="pics/jack.jpg" style="width:700px;height:350px;">
 
             <h3>Jack Stoetzel
                 <small>Vice President</small>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/jackson.jpg">
+            <img class="img-responsive" src="pics/jackson.jpg" style="width:700px;height:350px;">
 
             <h3>Jackson Bellinger
                 <small>Web Master</small>
@@ -120,7 +120,7 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/stephanie.jpg">
+            <img class="img-responsive" src="pics/stephanie.jpg" style="width:700px;height:350px;">
 
             <h3>Stephanie Warman
                 <small>Treasurer</small>
@@ -152,7 +152,7 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/will.png">
+            <img class="img-responsive" src="pics/will.png" style="width:700px;height:350px;">
 
             <h3>Willl Freeman
                 <small>Secretary</small>
@@ -183,7 +183,7 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/preston.jpg">
+            <img class="img-responsive" src="pics/preston.jpg" style="width:700px;height:350px;">
 
             <h3>Preston Mouw
                 <small>SGA Rep</small>
