update for heroku

--- a/partials/execs.html
+++ b/partials/execs.html
@@ -5,11 +5,6 @@
         <div class="col-lg-12">
             <h1 class="page-header">Exec Board
             </h1>
-            <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a>
-                </li>
-                <li class="active">About</li>
-            </ol>
         </div>
 
     </div>
@@ -23,7 +18,7 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/lela.jpg" style="width:700px;height:350px;">
+            <img class="img-responsive" src="pics/execs/lela.jpg" style="width:700px;height:350px;">
 
             <h3>Lela Bones
                 <small>President</small>
@@ -54,7 +49,7 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/jack.jpg" style="width:700px;height:350px;">
+            <img class="img-responsive" src="pics/execs/jack.jpg" style="width:700px;height:350px;">
 
             <h3>Jack Stoetzel
                 <small>Vice President</small>
@@ -87,17 +82,16 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/jackson.jpg" style="width:700px;height:350px;">
+            <img class="img-responsive" src="pics/execs/preston.jpg" style="width:700px;height:350px;">
 
-            <h3>Jackson Bellinger
-                <small>Web Master</small>
+            <h3>Preston Mouw
+                <small>SGA Rep</small>
             </h3>
-            <p>Web design warrior
-            Rare combination of outdoorsman and Computer Science major
-            Needs 1 & ½ strings to player happy birthday on guitar
-            Herbivore by choice
-            Beard
-            Rock climber, but loses to paper climber
+            <p>Hype man for all the people Lela’s already talked to
+            Computational Math and and Computer Science
+            Plays Piano significantly better than nails on a chalkboard
+            Can solve any rubix cube
+            Challenge him to Smash, he’s a Bowser main
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
@@ -120,7 +114,7 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/stephanie.jpg" style="width:700px;height:350px;">
+            <img class="img-responsive" src="pics/execs/stephanie.jpg" style="width:700px;height:350px;">
 
             <h3>Stephanie Warman
                 <small>Treasurer</small>
@@ -152,7 +146,7 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/will.png" style="width:700px;height:350px;">
+            <img class="img-responsive" src="pics/execs/will.png" style="width:700px;height:350px;">
 
             <h3>Willl Freeman
                 <small>Secretary</small>
@@ -183,16 +177,17 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="pics/preston.jpg" style="width:700px;height:350px;">
+            <img class="img-responsive" src="pics/execs/jackson.jpg" style="width:700px;height:350px;">
 
-            <h3>Preston Mouw
-                <small>SGA Rep</small>
+            <h3>Jackson Bellinger
+                <small>Web Master</small>
             </h3>
-            <p>Hype man for all the people Lela’s already talked to
-            Computational Math and and Computer Science
-            Plays Piano significantly better than nails on a chalkboard
-            Can solve any rubix cube
-            Challenge him to Smash, he’s a Bowser main
+            <p>Web design warrior
+            Rare combination of outdoorsman and Computer Science major
+            Needs 1 & ½ strings to player happy birthday on guitar
+            Herbivore by choice
+            Beard
+            Rock climber, but loses to paper climber
             </p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
@@ -221,10 +216,24 @@
     <div class="row">
 
         <div class="col-lg-12">
-            <h2 class="page-header">Professors</h2>
+            <h2 class="page-header">Faculty Advisors</h2>
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
+            <img class="img-responsive img-customer" src="pics/execs/jtanderson.jpg">
+            <h3>Dr. Anderson
+                <br><small>Computer Science Dept</small>
+            </h3>
+        </div>
+
+        <div class="col-md-2 col-sm-4 col-xs-6">
+            <img class="img-responsive img-customer" src="pics/execs/jwaustin.jpg">
+            <h3>Dr. Austin
+                <br><small>Math Dept</small>
+            </h3>
+        </div>
+
+        <!-- <div class="col-md-2 col-sm-4 col-xs-6">
             <img class="img-responsive img-customer" src="http://placehold.it/500x300">
         </div>
 
@@ -238,15 +247,7 @@
 
         <div class="col-md-2 col-sm-4 col-xs-6">
             <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-        </div>
-
-        <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-        </div>
-
-        <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-        </div>
+        </div> -->
 
     </div>
 
