--- a/templates/header.html
+++ b/templates/header.html
@@ -16,14 +16,14 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/gullcode">Gullcode</a>
                 </li>
-                <li><a href="#/execs">About</a>
+                <li><a href="#/execs">Exec Board</a>
                 </li>
-                <li><a href="#/faq">FAQ</a>
+                <!-- <li><a href="#/faq">FAQ</a>
                 </li>
                 <li><a href="#/contact">Contact</a>
                 </li>
                 <li><a href="#/blog">List of Posts</a>
-                </li>
+                </li> -->
             </ul>
         </div>
         <!-- /.navbar-collapse -->
