--- a/partials/blog.html
+++ b/partials/blog.html
@@ -3,14 +3,9 @@
     <div class="row">
 
         <div class="col-lg-12">
-            <h1 class="page-header">Blog Home 2
+            <h1 class="page-header">Blog Home 2 (UNDER CONSTRUCTION)
                 <small>Blog Homepage</small>
             </h1>
-            <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a>
-                </li>
-                <li class="active">Blog Home 2</li>
-            </ol>
         </div>
 
     </div>
