--- a/partials/home.html
+++ b/partials/home.html
@@ -12,19 +12,19 @@
         <div class="item active">
             <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Specialists');"></div>
             <div class="carousel-caption">
-                <h1>Reduce costs of finishing operations by 65%</h1>
+                <h1>3, 2, 1, Let's Jam</h1>
             </div>
         </div>
         <div class="item">
             <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Wordlwide');"></div>
             <div class="carousel-caption">
-                <h1>International Buyer Financing Available</h1>
+                <h1>There's something that doesn't make sense. Let's go poke it with a stick!</h1>
             </div>
         </div>
         <div class="item">
             <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Since 1910');"></div>
             <div class="carousel-caption">
-                <h1>Family Owned for Four Generations</h1>
+                <h1>Into the forest I go, to lose my mind and find my soul.</h1>
             </div>
         </div>
     </div>
@@ -38,58 +38,35 @@
     </a>
 </div>
 
+
+
+
 <div class="section">
 
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-4 col-md-4">
-                <h3><i class="fa fa-check-circle"></i> Bootstrap 3 Built</h3>
-                <p>The 'Modern Business' website template by <a href="http://startbootstrap.com">Start Bootstrap</a> is built with <a href="http://getbootstrap.com">Bootstrap 3</a>. Make sure you're up to date with latest Bootstrap documentation!</p>
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <img class="img-responsive" src="pics/macs-logo.png">
             </div>
-            <div class="col-lg-4 col-md-4">
-                <h3><i class="fa fa-pencil"></i> Ready to Style &amp; Edit</h3>
-                <p>You're ready to go with this pre-built page structure, now all you need to do is add your own custom stylings! You can see some free themes over at <a href="http://bootswatch.com">Bootswatch</a>, or come up with your own using <a href="http://getbootstrap.com/customize/">the Bootstrap customizer</a>!</p>
-            </div>
-            <div class="col-lg-4 col-md-4">
-                <h3><i class="fa fa-folder-open"></i> Many Page Options</h3>
-                <p>This template features many common pages that you might see on a business website. Pages include: about, contact, portfolio variations, blog, pricing, FAQ, 404, services, and general multi-purpose pages.</p>
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <h3>
+                    Hello and welcome to the SU Math and Computer Science Club!
+                </h3>
             </div>
         </div>
-        <!-- /.row -->
 
-    </div>
-    <!-- /.container -->
-
-</div>
-<!-- /.section -->
-
-<div class="section-colored text-center">
-
-    <div class="container">
-
-        <div class="row">
+        <div class="row" style="text-align: center">
+            <h2>This week's meeting</h2>
             <div class="col-lg-12">
-                <h2>Modern Business: A Clean &amp; Simple Full Website Template by Start Bootstrap</h2>
-                <p>A complete website design featuring various single page templates from Start Bootstraps library of free HTML starter templates.</p>
-                <hr>
+                <img class="img-responsive center-block" src="pics/meetings/10-22-19.jpg">
             </div>
+
         </div>
-        <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-
-</div>
-<!-- /.section-colored -->
-
-<div class="section">
-
-    <div class="container">
 
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Display Some Work on the Home Page Portfolio</h2>
+
                 <hr>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-6">
@@ -131,6 +108,7 @@
 </div>
 <!-- /.section -->
 
+<!--
 <div class="section-colored">
 
     <div class="container">
@@ -161,7 +139,7 @@
 
 </div>
 <!-- /.section-colored -->
-
+<!--
 <div class="section">
 
     <div class="container">
@@ -190,21 +168,5 @@
     </div>
     <!-- /.container -->
 
-</div>
+</div> -->
 <!-- /.section -->
-
-<div class="container">
-
-    <div class="row well">
-        <div class="col-lg-8 col-md-8">
-            <h4>'Modern Business' is a ready-to-use, Bootstrap 3 updated, multi-purpose HTML theme!</h4>
-            <p>For more templates and more page options that you can integrate into this website template, visit Start Bootstrap!</p>
-        </div>
-        <div class="col-lg-4 col-md-4">
-            <a class="btn btn-lg btn-primary pull-right" href="http://startbootstrap.com">See More Templates!</a>
-        </div>
-    </div>
-    <!-- /.row -->
-
-</div>
-<!-- /.container -->
